[package]
name = "apate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo init
# cargo add gloo wasm-bindgen web-sys

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
