[package]
name = "apate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo init
# cargo add gloo url wasm-bindgen web-sys

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
url = "2.5.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.67"
features = [ "CanvasRenderingContext2d"
           , "Element"
           , "HtmlInputElement"
           , "HtmlCanvasElement"
           , "Location"

           , "NamedNodeMap"
           , "Attr"

           , "PointerEvent"
           , "TouchEvent"
           , "TouchList"
           , "Touch"
           , "WheelEvent"
           ]
